[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/main/world/creature/Creature.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=2]
[ext_resource path="res://src/main/editor/creature/creature-editor-nametags.gd" type="Script" id=3]
[ext_resource path="res://src/main/editor/creature/HookableNametag.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/world/creature/CreatureShadow.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/editor/creature/creature-editor-shadows.gd" type="Script" id=6]
[ext_resource path="res://src/main/editor/creature/creature-selector.gd" type="Script" id=7]
[ext_resource path="res://src/main/editor/creature/creature-editor.gd" type="Script" id=8]
[ext_resource path="res://assets/main/puzzle/move.wav" type="AudioStream" id=9]
[ext_resource path="res://src/main/editor/creature/mutagen-control.gd" type="Script" id=10]
[ext_resource path="res://src/main/editor/creature/MutateAlleleButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main/editor/creature/mutate-ui.gd" type="Script" id=12]
[ext_resource path="res://src/main/ui/SettingsMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/main/ui/UiMenuShortcut.tres" type="ShortCut" id=14]
[ext_resource path="res://assets/main/editor/creature/unlocked.png" type="Texture" id=15]
[ext_resource path="res://assets/main/puzzle/rotate0.wav" type="AudioStream" id=16]
[ext_resource path="res://src/main/editor/creature/dialog-backdrop.gd" type="Script" id=17]
[ext_resource path="res://src/main/editor/creature/dialogs.gd" type="Script" id=18]
[ext_resource path="res://src/main/editor/creature/TweakSizeRow.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/main/editor/creature/TweakColorRow.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/main/editor/creature/TweakNameRow.tscn" type="PackedScene" id=22]
[ext_resource path="res://src/main/editor/creature/TweakEyeRow.tscn" type="PackedScene" id=24]
[ext_resource path="res://src/main/editor/creature/TweakAlleleRow.tscn" type="PackedScene" id=25]


[node name="CreatureEditor" type="Node"]
script = ExtResource( 8 )

[node name="World" type="Node" parent="."]

[node name="Shadows" type="Node2D" parent="World"]
script = ExtResource( 6 )
CreatureShadowScene = ExtResource( 5 )

[node name="Creatures" type="Node2D" parent="World"]

[node name="NwCreature" parent="World/Creatures" instance=ExtResource( 1 )]
position = Vector2( 164, 244 )
scale = Vector2( 1.5, 1.5 )
dna = {

}
suppress_sfx = true

[node name="NeCreature" parent="World/Creatures" instance=ExtResource( 1 )]
position = Vector2( 384, 244 )
scale = Vector2( 1.5, 1.5 )
dna = {

}
suppress_sfx = true

[node name="ECreature" parent="World/Creatures" instance=ExtResource( 1 )]
position = Vector2( 464, 384 )
scale = Vector2( 1.5, 1.5 )
dna = {

}
suppress_sfx = true

[node name="WCreature" parent="World/Creatures" instance=ExtResource( 1 )]
position = Vector2( 84, 384 )
scale = Vector2( 1.5, 1.5 )
dna = {

}
suppress_sfx = true

[node name="CenterCreature" parent="World/Creatures" instance=ExtResource( 1 )]
position = Vector2( 260, 400 )
scale = Vector2( 2.5, 2.5 )
suppress_sfx = true

[node name="SwCreature" parent="World/Creatures" instance=ExtResource( 1 )]
position = Vector2( 164, 524 )
scale = Vector2( 1.5, 1.5 )
dna = {

}
suppress_sfx = true

[node name="SeCreature" parent="World/Creatures" instance=ExtResource( 1 )]
position = Vector2( 384, 524 )
scale = Vector2( 1.5, 1.5 )
dna = {

}
suppress_sfx = true

[node name="Ui" type="CanvasLayer" parent="."]

[node name="Nametags" type="Node" parent="Ui"]
script = ExtResource( 3 )
HookableNametagScene = ExtResource( 4 )

[node name="CreatureSelector" type="Control" parent="Ui"]
margin_right = 600.0
margin_bottom = 600.0
mouse_filter = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reroll" type="Button" parent="Ui/CreatureSelector"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_top = 30.0
margin_right = 90.0
margin_bottom = 82.0
rect_min_size = Vector2( 180, 52 )
theme = ExtResource( 2 )
shortcut_in_tooltip = false
shortcut = ExtResource( 14 )
text = "Reroll"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HoverSound" type="AudioStreamPlayer" parent="Ui/CreatureSelector"]
stream = ExtResource( 9 )
volume_db = -8.0

[node name="ClickSound" type="AudioStreamPlayer" parent="Ui/CreatureSelector"]
stream = ExtResource( 16 )
volume_db = -4.0

[node name="TabContainer" type="TabContainer" parent="Ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -414.0
margin_top = 5.0
margin_right = -6.0
margin_bottom = 533.0
rect_min_size = Vector2( 408, 528 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mutate" type="Panel" parent="Ui/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 12 )

[node name="ScrollContainer" type="ScrollContainer" parent="Ui/TabContainer/Mutate"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Ui/TabContainer/Mutate/ScrollContainer"]
margin_right = 412.0
margin_bottom = 492.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 407.0
margin_bottom = 487.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mutagen" type="Control" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 402.0
margin_bottom = 20.0
rect_min_size = Vector2( 390, 20 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/Mutagen"]
anchor_bottom = 1.0
margin_right = 120.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Mutagen"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/Mutagen"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -267.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/Mutagen/HBoxContainer"]
margin_top = 2.0
margin_right = 160.0
margin_bottom = 18.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
max_value = 1.0
step = 0.0
value = 1.0
tick_count = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/Mutagen/HBoxContainer"]
margin_left = 170.0
margin_right = 230.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "100%"

[node name="Name" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 11 )]
text = "Name"
icon = ExtResource( 15 )
allele = "name"
two_states = true

[node name="Color" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 11 )]
margin_top = 56.0
margin_right = 205.0
margin_bottom = 82.0
rect_min_size = Vector2( 205, 0 )
text = "Overall Color"
allele = "body_rgb"

[node name="EyeContainer" type="HBoxContainer" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 402.0
margin_bottom = 113.0
custom_constants/separation = 5

[node name="Eye" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/EyeContainer" instance=ExtResource( 11 )]
margin_top = 0.0
margin_bottom = 26.0
text = "Eye"
allele = "eye"

[node name="Color" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/EyeContainer" instance=ExtResource( 11 )]
margin_left = 105.0
margin_top = 0.0
margin_right = 205.0
margin_bottom = 26.0
text = "Color"
allele = "eye_rgb"

[node name="Nose" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 11 )]
margin_top = 118.0
margin_bottom = 144.0
text = "Nose"
allele = "nose"

[node name="Mouth" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 11 )]
margin_top = 149.0
margin_bottom = 175.0
text = "Mouth"
allele = "mouth"

[node name="Cheek" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 11 )]
margin_top = 180.0
margin_bottom = 206.0
text = "Cheek"
allele = "cheek"

[node name="Ear" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 11 )]
margin_top = 211.0
margin_bottom = 237.0
text = "Ear"
allele = "ear"

[node name="HornContainer" type="HBoxContainer" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 242.0
margin_right = 402.0
margin_bottom = 268.0
custom_constants/separation = 5

[node name="Horn" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/HornContainer" instance=ExtResource( 11 )]
margin_top = 0.0
margin_bottom = 26.0
text = "Horn"
allele = "horn"

[node name="Color" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/HornContainer" instance=ExtResource( 11 )]
margin_left = 105.0
margin_top = 0.0
margin_right = 205.0
margin_bottom = 26.0
text = "Color"
allele = "horn_rgb"

[node name="BellyContainer" type="HBoxContainer" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 273.0
margin_right = 402.0
margin_bottom = 299.0
custom_constants/separation = 5

[node name="Belly" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/BellyContainer" instance=ExtResource( 11 )]
margin_top = 0.0
margin_bottom = 26.0
text = "Belly"
allele = "belly"

[node name="Color" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/BellyContainer" instance=ExtResource( 11 )]
margin_left = 105.0
margin_top = 0.0
margin_right = 205.0
margin_bottom = 26.0
text = "Color"
allele = "belly_rgb"

[node name="Size" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 11 )]
margin_top = 304.0
margin_bottom = 330.0
text = "Size"
allele = "fatness"

[node name="Spacer" type="Control" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 402.0
margin_bottom = 420.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportContainer" type="HBoxContainer" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 425.0
margin_right = 402.0
margin_bottom = 451.0
custom_constants/separation = 5

[node name="Import" type="Button" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/ImportContainer"]
margin_right = 100.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 2 )
text = "Import"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Export" type="Button" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/ImportContainer"]
margin_left = 105.0
margin_right = 205.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 2 )
text = "Export"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 456.0
margin_right = 100.0
margin_bottom = 482.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 2 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tweak" type="Panel" parent="Ui/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="Ui/TabContainer/Tweak"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Ui/TabContainer/Tweak/ScrollContainer"]
margin_right = 400.0
margin_bottom = 494.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 395.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 22 )]
margin_right = 378.0
creature_editor_path = NodePath("../../../../../../..")

[node name="Color" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 20 )]
margin_top = 34.0
margin_right = 378.0
margin_bottom = 60.0
allele = "body_rgb"
text = "Color"
creature_editor_path = NodePath("../../../../../../..")

[node name="Line Color" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 20 )]
margin_top = 64.0
margin_right = 378.0
margin_bottom = 90.0
allele = "line_rgb"
text = "Line Color"
creature_editor_path = NodePath("../../../../../../..")

[node name="Eye" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 25 )]
margin_top = 94.0
margin_right = 378.0
margin_bottom = 120.0
allele = "eye"
text = "Eye"
creature_editor_path = NodePath("../../../../../../..")

[node name="Eye Color" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 24 )]
margin_right = 378.0
creature_editor_path = NodePath("../../../../../../..")

[node name="Nose" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 25 )]
margin_top = 154.0
margin_right = 378.0
margin_bottom = 180.0
allele = "nose"
text = "Nose"
creature_editor_path = NodePath("../../../../../../..")

[node name="Mouth" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 25 )]
margin_top = 184.0
margin_right = 378.0
margin_bottom = 210.0
allele = "mouth"
text = "Mouth"
creature_editor_path = NodePath("../../../../../../..")

[node name="Cheek" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 25 )]
margin_top = 214.0
margin_right = 378.0
margin_bottom = 240.0
allele = "cheek"
text = "Cheek"
creature_editor_path = NodePath("../../../../../../..")

[node name="Ear" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 25 )]
margin_top = 244.0
margin_right = 378.0
margin_bottom = 270.0
allele = "ear"
text = "Ear"
creature_editor_path = NodePath("../../../../../../..")

[node name="Horn" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 25 )]
margin_top = 274.0
margin_right = 378.0
margin_bottom = 300.0
allele = "horn"
text = "Horn"
creature_editor_path = NodePath("../../../../../../..")

[node name="Horn Color" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 20 )]
margin_top = 304.0
margin_right = 378.0
margin_bottom = 330.0
allele = "horn_rgb"
text = "Horn Color"
creature_editor_path = NodePath("../../../../../../..")

[node name="Belly" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 25 )]
margin_top = 334.0
margin_right = 378.0
margin_bottom = 360.0
allele = "belly"
text = "Belly"
creature_editor_path = NodePath("../../../../../../..")

[node name="Belly Color" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 20 )]
margin_top = 364.0
margin_right = 378.0
margin_bottom = 390.0
allele = "belly_rgb"
text = "Belly Color"
creature_editor_path = NodePath("../../../../../../..")

[node name="Size" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 19 )]
margin_right = 378.0
creature_editor_path = NodePath("../../../../../../..")

[node name="Spacer" type="Control" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 424.0
margin_right = 378.0
margin_bottom = 424.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportContainer" type="HBoxContainer" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 428.0
margin_right = 378.0
margin_bottom = 454.0
custom_constants/separation = 5

[node name="Import" type="Button" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer/ImportContainer"]
margin_right = 100.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 2 )
text = "Import"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Export" type="Button" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer/ImportContainer"]
margin_left = 105.0
margin_right = 205.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 2 )
text = "Export"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 458.0
margin_right = 100.0
margin_bottom = 484.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 2 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Ui"]
margin_left = 839.0
margin_top = 539.0
margin_right = 1019.0
margin_bottom = 565.0
theme = ExtResource( 2 )
shortcut_in_tooltip = false
shortcut = ExtResource( 14 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Quit" type="Button" parent="Ui"]
margin_left = 839.0
margin_top = 569.0
margin_right = 1019.0
margin_bottom = 595.0
theme = ExtResource( 2 )
shortcut_in_tooltip = false
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Dialogs" type="Control" parent="Ui"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}
creature_editor_path = NodePath("../..")

[node name="Backdrop" type="ColorRect" parent="Ui/Dialogs"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.752941 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveConfirmation" type="ConfirmationDialog" parent="Ui/Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 392.0
margin_top = 245.0
margin_right = 592.0
margin_bottom = 325.0
popup_exclusive = true
window_title = "Confirm"
dialog_text = "Is this what you want to look like?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Import" type="FileDialog" parent="Ui/Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = 80.0
margin_right = 792.0
margin_bottom = 480.0
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/workspace/turbofat/project"
current_path = "/workspace/turbofat/project/"

[node name="Export" type="FileDialog" parent="Ui/Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = 80.0
margin_right = 792.0
margin_bottom = 480.0
popup_exclusive = true
window_title = "Export Creature"
access = 2
current_dir = "/workspace/turbofat/project"
current_path = "/workspace/turbofat/project/"

[node name="Error" type="AcceptDialog" parent="Ui/Dialogs"]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true
window_title = "Error"
dialog_text = "Error importing creature."

[node name="SettingsMenu" parent="." instance=ExtResource( 13 )]
[connection signal="creature_clicked" from="Ui/CreatureSelector" to="." method="_on_CreatureSelector_creature_clicked"]
[connection signal="hovered_creature_changed" from="Ui/CreatureSelector" to="Ui/Nametags" method="_on_CreatureSelector_hovered_creature_changed"]
[connection signal="mouse_exited" from="Ui/CreatureSelector" to="Ui/CreatureSelector" method="_on_mouse_exited"]
[connection signal="pressed" from="Ui/CreatureSelector/Reroll" to="." method="_on_Reroll_pressed"]
[connection signal="value_changed" from="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/Mutagen/HBoxContainer/HSlider" to="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/Mutagen" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/ImportContainer/Import" to="Ui/Dialogs" method="_on_ImportButton_pressed"]
[connection signal="pressed" from="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/ImportContainer/Export" to="Ui/Dialogs" method="_on_ExportButton_pressed"]
[connection signal="pressed" from="Ui/TabContainer/Mutate/ScrollContainer/MarginContainer/VBoxContainer/Save" to="Ui/Dialogs" method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer/ImportContainer/Import" to="Ui/Dialogs" method="_on_ImportButton_pressed"]
[connection signal="pressed" from="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer/ImportContainer/Export" to="Ui/Dialogs" method="_on_ExportButton_pressed"]
[connection signal="pressed" from="Ui/TabContainer/Tweak/ScrollContainer/MarginContainer/VBoxContainer/Save" to="Ui/Dialogs" method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Ui/Settings" to="SettingsMenu" method="_on_Settings_pressed"]
[connection signal="pressed" from="Ui/Quit" to="." method="_on_Quit_pressed"]
[connection signal="about_to_show" from="Ui/Dialogs/SaveConfirmation" to="Ui/Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="confirmed" from="Ui/Dialogs/SaveConfirmation" to="Ui/Dialogs" method="_on_SaveConfirmation_confirmed"]
[connection signal="popup_hide" from="Ui/Dialogs/SaveConfirmation" to="Ui/Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="about_to_show" from="Ui/Dialogs/Import" to="Ui/Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="file_selected" from="Ui/Dialogs/Import" to="Ui/Dialogs" method="_on_ImportDialog_file_selected"]
[connection signal="popup_hide" from="Ui/Dialogs/Import" to="Ui/Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="about_to_show" from="Ui/Dialogs/Export" to="Ui/Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="file_selected" from="Ui/Dialogs/Export" to="Ui/Dialogs" method="_on_ExportDialog_file_selected"]
[connection signal="popup_hide" from="Ui/Dialogs/Export" to="Ui/Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="about_to_show" from="Ui/Dialogs/Error" to="Ui/Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="popup_hide" from="Ui/Dialogs/Error" to="Ui/Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="quit_pressed" from="SettingsMenu" to="." method="_on_Quit_pressed"]
